Moving into Beta, levels now split int main_levels, demo_levels, and secret_levels
Signed-off-by: Thomas Feuerborn <tfeuerbo@gmail.com>

--- a/Assets/main.css
+++ b/Assets/main.css
@@ -11,9 +11,19 @@
 
 html {
     height: 99vh;
+    background-color: #222;
 }
 
 footer {
     position: absolute;
     bottom: 0;
+}
+
+#stuff {
+    width: 50%;
+    margin: 0 auto;
+}
+
+#stuff > h3 {
+    text-align: center;
 }
