--- a/Assets/main.css
+++ b/Assets/main.css
@@ -4,14 +4,18 @@
 }
 
 #game {
+    /*
     border-bottom: 1px solid #aaa;
     border-left: 5px solid #4a4;
+*/
     margin: 0 auto;
 }
 
 html {
     height: 99vh;
     background-color: #222;
+    color: white;
+    min-width: 900px;
 }
 
 footer {
@@ -20,6 +24,12 @@ footer {
 }
 
 #stuff {
+    color: white;
+    width: 50%;
+    margin: 0 auto;
+}
+
+#stuff > ul {
     width: 50%;
     margin: 0 auto;
 }
