implemented sfx minor style changes
Signed-off-by: Thomas Feuerborn <tfeuerbo@gmail.com>

--- a/Assets/main.css
+++ b/Assets/main.css
@@ -3,7 +3,7 @@
     src: url(fonts/Bonehead.ttf);
 }
 
-*{
+* {
     font-family: bonehead;
     color: #F80;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
@@ -20,13 +20,13 @@ html {
     min-width: 900px;
 }
 
-.spacer{
+.spacer {
     width: 1px;
     height: 50px;
     margin: 0 auto;
 }
 
-h1{
+h1 {
     font-size: 72px;
     text-align: center;
 }
@@ -46,6 +46,7 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
     border: 2px solid black;
+    background-color: black;
     margin: 0 auto;
 }
 
